Move book queries into gateway and merge candles with realtime